fix: crawl-worker HttpClientPort bean 누락 수정 및 Java 21 코드 개선
- crawl-worker build.gradle에 http-client 모듈 의존성 추가
  - HttpClientPort bean not found 오류 해결
- Java 21 모범 사례 적용
  - Collection.isEmpty() 사용 (size() > 0 대신)
  - List.getFirst() 사용 (get(0) 대신)